--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   "license": "ISC",
   "devDependencies": {
     "babel-preset-env": "^1.6.1",
-    "webpack": "^4.0.1",
-    "webpack-cli": "^2.0.9"
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15"
   },
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.3",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
-    "express": "^4.16.2",
-    "redux": "^3.7.2"
+    "express": "^4.16.3",
+    "hoek": "^5.0.3",
+    "json-schema": "^0.2.3",
+    "redux": "^3.7.2",
+    "webpack-sources": "^1.1.0"
   }
 }
