--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "babel-preset-env": "^1.6.1",
+    "redux-logger": "^3.0.6",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15"
   },
