--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "express": "^4.16.3",
     "hoek": "^5.0.3",
     "json-schema": "^0.2.3",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
     "redux": "^3.7.2",
     "webpack-sources": "^1.1.0"
   }
