--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hoek": "^5.0.3",
     "json-schema": "^0.2.3",
     "react": "^16.4.1",
+    "react-bootstrap": "^0.32.3",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
